--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     <body>
         <header>
             <h1>CTC Artworks</h1>
+            <p>An illustrator striving to grow digitally and traditionally all while learning heraldry.</p>
         </header>
         <p>Full site coming soon&hellip;</p>
         <h2>Elsewhere&hellip;</h2>
         <ul>
-            <li>&#128188; <a href="https://www.polywork.com/t_co" target="_blank">Polywork &#8599;</a></li>
-            <li>&#128038; <a href="https://twitter.com/tco_design" target="_blank">Twitter &#8599;</a></li>
-            <li>&#127936; <a href="https://dribbble.com/T-Co" target="_blank">dribbble &#8599;</a></li>
-            <li>&#128211; <a href="https://medium.com/@T.Co" target="_blank">Medium &#8599;</a></li>
-            <li>&#128008; <a href="https://github.com/CTCorbett" target="_blank">GitHub &#8599;</a></li>
+            <li>&#128188; <a href="https://society6.com/ctcorbett" target="_blank">society6 &#8599;</a></li>
+            <li>&#128038; <a href="https://twitter.com/CTC_artworks" target="_blank">Twitter &#8599;</a></li>
+            <li>&#127936; <a href="https://folio.procreate.com/ctcorbett" target="_blank">ProCreate &#8599;</a></li>
+            <li>&#128211; <a href="https://vsco.co/ctylercorbett/gallery" target="_blank">VSCO &#8599;</a></li>
+            <li>&#128008; <a href="https://ctc-artworks.tumblr.com/ " target="_blank">tumblr &#8599;</a></li>
             <li>&#128235; <a href="mailto:ctylercorbett@gmail.com">email &#8599;</a></li>
         </ul>
         <footer>
