updated links and copy

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <!--<meta name="theme-color" content="#008585">-->
         <meta name="viewport" content="width=device-width">
         <title>CTC Artworks - Heraldry, Illustration, Crafts and more</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900">
         <link rel="icon" href="./favicon.svg" type="image/svg+xml">
         <link rel="icon" href="./favicon.png" type="image/png">
         <link rel="stylesheet" type="text/css" href="styles/primary.css">
+        
     </head>
     <body>
         <header>
@@ -16,12 +18,12 @@
         <p>Full site coming soon&hellip;</p>
         <h2>Elsewhere&hellip;</h2>
         <ul>
-            <li>&#128188; <a href="https://society6.com/ctcorbett" target="_blank">society6 &#8599;</a></li>
-            <li>&#128038; <a href="https://twitter.com/CTC_artworks" target="_blank">Twitter &#8599;</a></li>
-            <li>&#127936; <a href="https://folio.procreate.com/ctcorbett" target="_blank">ProCreate &#8599;</a></li>
-            <li>&#128211; <a href="https://vsco.co/ctylercorbett/gallery" target="_blank">VSCO &#8599;</a></li>
-            <li>&#128008; <a href="https://ctc-artworks.tumblr.com/ " target="_blank">tumblr &#8599;</a></li>
-            <li>&#128235; <a href="mailto:ctylercorbett@gmail.com">email &#8599;</a></li>
+            <li><a href="https://society6.com/ctcorbett" target="_blank">society6</a></li>
+            <li><a href="https://twitter.com/CTC_artworks" target="_blank">Twitter</a></li>
+            <li><a href="https://folio.procreate.com/ctcorbett" target="_blank">ProCreate</a></li>
+            <li><a href="https://vsco.co/ctylercorbett/gallery" target="_blank">VSCO</a></li>
+            <li><a href="https://ctc-artworks.tumblr.com/ " target="_blank">tumblr</a></li>
+            <li><a href="mailto:ctylercorbett@gmail.com">email</a></li>
         </ul>
         <footer>
             <small>&copy; 2023 C. Tyler Corbett. All Rights Reserved</small>
