--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!--<meta name="theme-color" content="#008585">-->
         <meta name="viewport" content="width=device-width">
         <title>CTC Artworks - Heraldry, Illustration, Crafts and more</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=EB+Garamond:ital,wght@0,400..800;1,400..800">
         <link rel="icon" href="./favicon.svg" type="image/svg+xml">
         <link rel="icon" href="./favicon.png" type="image/png">
         <link rel="stylesheet" type="text/css" href="styles/primary.css">
@@ -12,21 +12,21 @@
     </head>
     <body>
         <header>
+            <img class="logo-rune-header" src="./images/ctc-rune-stamp.svg" />
             <h1>CTC Artworks</h1>
-            <p>An illustrator striving to grow digitally and traditionally all while learning heraldry.</p>
+            <h2>Heraldist, illustrator, and crafter</h2>
         </header>
         <p>Full site coming soon&hellip;</p>
-        <h2>Elsewhere&hellip;</h2>
+        <h6>Elsewhere&hellip;</h6>
         <ul>
-            <li><a href="https://society6.com/ctcorbett" target="_blank">society6</a></li>
             <li><a href="https://twitter.com/CTC_artworks" target="_blank">Twitter</a></li>
+            <li><a href="https://ctc-artworks.tumblr.com/ " target="_blank">tumblr</a></li>
+            <li><a href="https://society6.com/ctcorbett" target="_blank">society6</a></li>
             <li><a href="https://folio.procreate.com/ctcorbett" target="_blank">ProCreate</a></li>
             <li><a href="https://vsco.co/ctylercorbett/gallery" target="_blank">VSCO</a></li>
-            <li><a href="https://ctc-artworks.tumblr.com/ " target="_blank">tumblr</a></li>
-            <li><a href="mailto:ctylercorbett@gmail.com">email</a></li>
         </ul>
         <footer>
-            <small>&copy; 2023 C. Tyler Corbett. All Rights Reserved</small>
+            <small><img src="./images/ctc-rune-simple.svg" /> &copy; 2023 C. Tyler Corbett. All Rights Reserved</small>
         </footer>
     </body>
 </html>
