blazons resource summary

--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
             <h2>Heraldist, illustrator, and crafter</h2>
         </header>
         <p>Full site coming soon&hellip;</p>
+        <h2>Resources</h2>
+        <h3>Blazon Proportions Template</h3>
+        <p>Use these templates to quickly test out how your blazon may look across different shield shapes.</p>
+        <ul class="features">
+            <li>Featuring ten basic geometric shapes, these templates can give you insight into a broad pool of potential emblazons.</li>
+            <li>Each shield shape features optical center marks and a dot grid equally divisible into thirds or fourths for fast measurements of ordinaries and other geometric elements.</li>
+            <li>Included are pages for 1-inch thumbnail sketches, or more detailed 2-inch drawings.</li>
+            <li>Availalbe in PDF and PNG filetypes. Print them out or import them into your favorite digital drawing app!</li>
+            <li>Rendered in a cyan-like color, these pages are perfect for easily removing the guidelines when scanning.</li>
+            <li>The thumbnails template is also available in a charcoal outlined version, to help save you additional time.</li>
+        </ul>
+        <a>Download for A4 sizes</a>
+        <a>Download for Letter sizes</a>
         <h6>Elsewhere&hellip;</h6>
         <ul>
             <li><a href="https://twitter.com/CTC_artworks" target="_blank">Twitter</a></li>
