--- a/index.html
+++ b/index.html
@@ -17,28 +17,30 @@
                 <h1>CTC Artworks</h1>
                 <h2>Heraldist, illustrator, and crafter</h2>
             </header>
-            <p>Full site coming soon&hellip;</p>
-            <h2>Resources</h2>
-            <h3>Blazon Proportions Template</h3>
-            <p>Use these templates to quickly test out how your blazon may look across different shield shapes.</p>
-            <ul class="product-features">
-                <li>Featuring ten basic geometric shapes, these templates can give you insight into a broad pool of potential emblazons.</li>
-                <li>Each shield shape features optical center marks and a dot grid equally divisible into thirds or fourths for fast measurements of ordinaries and other geometric elements.</li>
-                <li>Included are pages for 1-inch thumbnail sketches, or more detailed 2-inch drawings.</li>
-                <li>Availalbe in PDF and PNG filetypes. Print them out or import them into your favorite digital drawing app!</li>
-                <li>Rendered in a cyan-like color, these pages are perfect for easily removing the guidelines when scanning.</li>
-                <li>The thumbnails template is also available in a charcoal outlined version, to help save you additional time.</li>
-            </ul>
-            <a>Download for A4 sizes</a>
-            <a>Download for Letter sizes</a>
-            <h6>Elsewhere&hellip;</h6>
-            <ul>
-                <li><a href="https://twitter.com/CTC_artworks" target="_blank">Twitter</a></li>
-                <li><a href="https://ctc-artworks.tumblr.com/ " target="_blank">tumblr</a></li>
-                <li><a href="https://society6.com/ctcorbett" target="_blank">society6</a></li>
-                <li><a href="https://folio.procreate.com/ctcorbett" target="_blank">ProCreate</a></li>
-                <li><a href="https://vsco.co/ctylercorbett/gallery" target="_blank">VSCO</a></li>
-            </ul>
+            <article>
+                <p>Full site coming soon&hellip;</p>
+                <h2>Resources</h2>
+                <h3>Blazon Proportions Template</h3>
+                <p>Use these templates to quickly test out how your blazon may look across different shield shapes.</p>
+                <ul class="product-features">
+                    <li>Featuring ten basic geometric shapes, these templates can give you insight into a broad pool of potential emblazons.</li>
+                    <li>Each shield shape features optical center marks and a dot grid equally divisible into thirds or fourths for fast measurements of ordinaries and other geometric elements.</li>
+                    <li>Included are pages for 1-inch thumbnail sketches, or more detailed 2-inch drawings.</li>
+                    <li>Availalbe in PDF and PNG filetypes. Print them out or import them into your favorite digital drawing app!</li>
+                    <li>Rendered in a cyan-like color, these pages are perfect for easily removing the guidelines when scanning.</li>
+                    <li>The thumbnails template is also available in a charcoal outlined version, to help save you additional time.</li>
+                </ul>
+                <a class="btn btn-primary download">Download for A4 sizes</a>
+                <a class="btn btn-secondary download">Download for Letter sizes</a>
+                <h6>Elsewhere&hellip;</h6>
+                <ul>
+                    <li><a href="https://twitter.com/CTC_artworks" target="_blank">Twitter</a></li>
+                    <li><a href="https://ctc-artworks.tumblr.com/ " target="_blank">tumblr</a></li>
+                    <li><a href="https://society6.com/ctcorbett" target="_blank">society6</a></li>
+                    <li><a href="https://folio.procreate.com/ctcorbett" target="_blank">ProCreate</a></li>
+                    <li><a href="https://vsco.co/ctylercorbett/gallery" target="_blank">VSCO</a></li>
+                </ul>
+            </article>
             <footer>
                 <small><img src="./images/ctc-rune-simple.svg" /> &copy; 2023 C. Tyler Corbett. All Rights Reserved</small>
             </footer>
